fix: always show scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -74,7 +74,7 @@
 	}
 
 	body {
-		@apply bg-[url(~/assets/grid.png)] bg-size-[8rem] bg-repeat text-foreground;
+		@apply overflow-y-scroll bg-[url(~/assets/grid.png)] bg-size-[8rem] bg-repeat text-foreground;
 	}
 }
 
